shortened button name from retake selfie to retake with a camera icon to avoid spacing issues.

--- a/src/App.css
+++ b/src/App.css
@@ -92,10 +92,12 @@ h1 {
 
 .retake-selfie-button {
   margin: 5px;
+  font-size: 0.85rem;
 }
 
 .help-button {
   margin: 5px;
+  font-size: 0.85em;
 }
 
 /* media queries for responsiveness */
